# Gnome-MCP-GUI

./: .gitignore  Cargo.toml  README.md
Gnome MCP Bridge.app/Contents/: Info.plist
src/: main.rs
